# comfyui_modal_bridge

./: .comfyignore  .gitignore  INSTALL.md  README.md  SETUP.md  __init__.py  categories.py  config.py  contract.py  deploy.py  modal_client.py  modal_volume.py  model_deps.py  model_registry.yaml  node_sync.py  pyproject.toml  routes.py  secrets.example.toml  sync_models.py  workflow_check.py
.github/workflows/: ci.yml
modal_app/: _comfy_ws.py  _custom_nodes_data.py  aigc_delivery.py  comfy_log.py  extra_model_paths.yaml  modal_app.py  modal_image.py  node_compat_check.py  snapshot_bench.py
tests/: test_core.py
web/: modal_bridge.js
