[project]
name = "comfyui_modal_bridge"
description = "一键把当前 ComfyUI 工作流推到 Modal Serverless GPU(H100)跑,自动同步本地模型/自定义节点,出图回填画板,零终端。 | One-click run the current ComfyUI workflow on Modal Serverless GPU (H100); auto-sync local models/custom-nodes, results back to the canvas, no terminal."
version = "0.3.8"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "pyyaml",
]

[project.urls]
Repository = "https://github.com/lynclee/comfyui_modal_bridge"

# ComfyUI Registry 元数据
# 发布命令:comfy node publish(需 comfy-cli + Registry API key)
# 文档:https://docs.comfy.org/registry/publishing
[tool.comfy]
PublisherId = "lynclee"
DisplayName = "Modal Bridge — 云端 GPU 跑图 / Cloud GPU"
Icon = ""
